# crypto-market-alerts-discord-bot

./: Cargo.toml  README.md  docker-compose.yml
config/: default.toml  production.toml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: cli.rs  error_handling.rs  main.rs  settings.rs
src/bot/: handler.rs  mod.rs
src/bot/command/: alert.rs
src/db/: alert.rs  mod.rs  prelude.rs
src/webserver/: handlers.rs  mod.rs  models.rs
