[workspace]
members = [".", "migration"]

[package]
name = "crypto-market-alerts-bot" 
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8" }
serenity = "0.11"
tokio = { version = "1", features = ["full"] }
warp = "0.3.3"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
anyhow = "1.0.65"
serde = { version = "1", features = ["derive"] }
config = "0.13.1"
readonly = "0.2.2"
vaultrs = "0.6.2"
chrono = "0.4"
migration = { path = "migration" } 
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1.58"
